Closed Bug 125316 Opened 23 years ago Closed 23 years ago

Cannot reply from POP3 to a message with an inline image

Categories

(MailNews Core :: Composition, defect, P1)

defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.9

People

(Reporter: bugzilla, Assigned: bugzilla)

Details

(Keywords: smoketest, Whiteboard: nsbeta1, have fix)

Attachments

(1 file)

Wnen I reply from a POP3 account (works fine from imap) to a message with an
inline image, the image link is bogus which cause the send to report a problem
attaching a file!

I see this problem with a recent debug build as well with a Commercial build
from December 17!

me are missing the message id (?number=...") in the image link. My guess is that
we overwrite it when we add the query "?header=quotebody" in the url.
nominating nsbeta1, we should be able to reply correctly to any POP message.
Status: NEW → ASSIGNED
Keywords: smoketest
Priority: -- → P1
Whiteboard: nsbeta1
Target Milestone: --- → mozilla0.9.9
Whiteboard: nsbeta1 → nsbeta1, have fix
Attached patch Proposed fix, v1Splinter Review
The assumption we where doing about beeing able to set the query part of a url
whithout having to care of a previous value was wrong!
Comment on attachment 69303 [details] [diff] [review]
Proposed fix, v1

r=cavin.
Attachment #69303 - Flags: review+
I'll let Seth sr this since he knows what's going on here much more than I do.
adding darin to the cc list.  I think he saw this issue in the debugger, but I
claimed the assumption was correct.  no cookie for me!

reviewing now...
Comment on attachment 69303 [details] [diff] [review]
Proposed fix, v1

sr=sspitzer
Attachment #69303 - Flags: superreview+
Fix checked in
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
QA Contact: sheelar → stephend
Verified FIXED:

Tested with:

Windows 2K - 2002-03-01-03
RedHat 7.2 - 2002-03-01-08
Mac OS X 10.1.3 - 2002-03-01-08

POP3 - qatest36@netscape.com (judge.netscape.com) with Reply and Reply All,
inline images...
Status: RESOLVED → VERIFIED
OS: Windows 2000 → All
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: