Fix for bug 125316. Don't overwite the current url's query part when adding others query. R=cavin, SR=sspitzer